# mcps

./: .gitignore  README.md  README_ZH.md  README_zh.md
.github/workflows/: build-check-library_master.yml  build-check-time_master.yml  package-git.yml  publish-to-pypi-library_master.yml  publish-to-pypi-time_master.yml  release-mcp-git.yml
.trae/rules/: project_rules.md
dev_master/: .env.example  .gitignore  PRD.md  README.md  README_ZH.md  pyproject.toml
dev_master/.trae/documents/: MCP-DevAgent-产品需求文档.md  MCP-DevAgent-技术架构文档.md
dev_master/.trae/rules/: project_rules.md
dev_master/migrations/: 001_schema_refactor.sql
dev_master/scripts/: check_db.py
dev_master/src/mcp_devagent/: __init__.py  main.py
dev_master/src/mcp_devagent/config/: __init__.py  environment.py  settings.py
dev_master/src/mcp_devagent/database/: __init__.py  connection.py  init.py  migrations.py  models.py
dev_master/src/mcp_devagent/server/: __init__.py  app.py  mcp_protocol.py  mcp_server.py
dev_master/src/mcp_devagent/server/handlers/: __init__.py  base.py  code.py  development.py  embedding.py  export.py  project.py  search.py
dev_master/src/mcp_devagent/services/: __init__.py  embedding_service.py  export_service.py  llm_service.py  search_service.py  vector_cache_service.py
dev_master/src/mcp_devagent/workflow/: __init__.py  config.py  integrations.py  nodes.py  routing.py  state_manager.py  workflow_engine.py
dev_master/tests/: README.md  __init__.py  test_database.py  test_embedding_service.py  test_export_handler.py  test_export_service.py  test_llm_service.py  test_mcp_server.py  test_search_service.py  test_vector_cache_service.py  test_workflow.py
dev_master/tests/docs/: test_analysis_report.md  test_optimization_plan.md
dev_master/tests/integration/: test_code_generation.py  test_cot_functionality.py  test_requirement_analysis.py
library_master/: API_REFERENCE.md  README.md  README_ZH.md  Release.md  pyproject.toml
library_master/test/: test_context7_comprehensive.py  test_context7_tools.py  test_language_enhancement.py  test_mcp_tools.py  test_real_scenarios.py  test_thread_pool_control.py
public/cache/: IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml  pyproject.toml
public/cache/cache/: __init__.py  base.py  benchmark.py  config.py  exceptions.py  l1_moka.py  l2_redis.py  manager.py
public/cache/tests/: test_cache.py  test_integration.py
services/git/: API.md  INSTALL.md  README.md  TROUBLESHOOTING.md  pyproject.toml
services/git/src/mcp_git/: __init__.py  advanced_ops.py  branch_ops.py  dependencies.py  errors.py  read_ops.py  remote_ops.py  server.py  stash_ops.py  write_ops.py
services/git/tests/: test_report.md  test_verification.py
services/git/tests/integration/: conftest.py  test_advanced_scenarios.py  test_workflow.py
services/git/tests/unit/: test_advanced_ops_extra.py  test_branch_cov.py  test_core_ops.py  test_dependencies.py  test_dependencies_cov.py  test_dependencies_more.py  test_features_ops.py  test_performance_bench.py  test_read_ops_more.py  test_remote_ops_extra.py  test_server_cov.py  test_server_logging_cov.py  test_server_tools_cov.py  test_stash_cov.py  test_write_cov.py
services/prompts/: .gitignore  README.md  README_zh.md  alembic.ini  config.toml  docker-compose.yml  main.py  pyproject.toml  pytest.ini
services/prompts/.github/workflows/: ci.yml  pgvector-rpc.yml  release.yml  test.yml
services/prompts/alembic/: README  configure_prompts_schema.sql  env.py  init_supabase_schema.sql  script.py.mako
services/prompts/alembic/versions/: 0001_init_core_models.py  0002_autogen_models.py  0002_core_auth_tables.py
services/prompts/src/prompt_manager/: __init__.py
services/prompts/src/prompt_manager/api/: __init__.py  __main__.py  http_server.py  http_server_direct.py
services/prompts/src/prompt_manager/auth/: deps.py  direct_auth.py  direct_router.py  manager.py  models.py  router.py
services/prompts/src/prompt_manager/core/: cache.py  local_cache.py  manager.py  queue.py
services/prompts/src/prompt_manager/dal/: database.py  types.py  vector_index.py
services/prompts/src/prompt_manager/dal/supabase/: client.py  service.py
services/prompts/src/prompt_manager/infrastructure/: time_network.py
services/prompts/src/prompt_manager/models/: __init__.py  orm.py  schemas.py
services/prompts/src/prompt_manager/services/: config_service.py  embedding.py  local_embedding.py  supabase_service.py  sync_engine.py  template.py
services/prompts/src/prompt_manager/utils/: config.py  exceptions.py  logger.py
services/prompts/tests/: acceptance_test.sh  conftest.py  factories.py  test_auth_login.py  test_config.toml  test_exports.py  uat_verify.py
services/prompts/tests/acceptance/: test_dynamic_dimension_workflow.py
services/prompts/tests/benchmarks/: test_db_perf.py  test_embedding_perf.py
services/prompts/tests/e2e/: test_api.py  test_embedding_local_switch.py  test_security.py
services/prompts/tests/integration/: test_env_cache_flow_http.py  test_manager.py  test_postgres.py  test_time_network_real.py
services/prompts/tests/unit/: test_config.py  test_dynamic_startup.py  test_embedding_dynamic.py  test_embedding_service.py  test_env_and_cache.py  test_infra_coverage.py  test_local_embedding_provider.py  test_manager_core.py  test_manager_edge_cases.py  test_manager_helpers.py  test_sqlite_env_path.py  test_supabase_schema_init.py  test_supabase_service.py  test_sync_engine.py  test_template.py  test_time_network.py  test_timestamps.py  test_vector_index.py
services/prompts/tests/unit/supabase/: test_client.py  test_service.py
time_master/: .flake8  .gitignore  API_REFERENCE.md  README.md  README_ZH.md  RELEASE_NOTES.md  Release.md  pyproject.toml
time_master/src/: comprehensive_test.py  mcp_service.py
time_master/test/: test_cli.py  test_config.py  test_core.py  test_exceptions.py  test_holiday_manager.py  (+2 more)
timemaster/: .github-workflows-timemaster-ci.yml  .gitignore  API_REFERENCE.md  README.md  README_ZH.md  Release.md  pyproject.toml
timemaster/src/timemaster/: cli.py  mcp_service.py
(+23 files in other folders)
