[project]
name = "timemaster"
version = "0.1.2"
description = "A canonical, high-reliability, developer-first modular common component for handling timezones and time in Python."
authors = [
    { name = "Kirky.X", email = "Kirky-X@outlook.com" }
]
dependencies = [
    "requests>=2.25.0",
    "pytz>=2021.1",
    "tzlocal>=4.1",
    "thefuzz>=0.19.0",
    "python-Levenshtein>=0.12.0",
    "mcp>=1.13.1",
    "holidays>=0.34",
    "pycountry>=23.12.11",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "Apache 2.0" }

[project.optional-dependencies]
dev = [
    "ruff>=0.0.200",
    "black>=21.0.0",
]

[project.scripts]
timemaster = "timemaster.cli:main"
timemaster-mcp = "timemaster.mcp_service:async_main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "ruff>=0.0.200",
    "black>=21.0.0",
]