[project]
name = "mcp-git"
version = "0.1.0"
description = "MCP module for Git operations using PyGit2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygit2>=1.13.0",
    "mcp>=0.1.0",
]

[project.scripts]
mcp-git = "mcp_git.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_git"]
