[project]
name = "mcp-git"
version = "0.1.0"
description = "MCP module for Git operations using PyGit2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygit2>=1.13.0",
    "mcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
mcp-git = "mcp_git.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_git"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=mcp_git --cov-report=term-missing:skip-covered --cov-fail-under=78"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true
no_implicit_optional = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
