[project]
name = "mcp-git"
version = "0.1.0"
description = "MCP module for Git operations using PyGit2"
readme = "README.md"
authors = [
    { name = "Kirky-X", email = "kirky-x@outlook.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pygit2>=1.13.0",
    "mcp>=0.1.0",
]

[project.scripts]
mcp-git = "mcp_git.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.default]
env-vars = { PYTHONDONTWRITEBYTECODE = "1" }

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_git"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.uv.sources]
mcp-git = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=mcp_git --cov-report=term-missing:skip-covered --cov-fail-under=78 -p no:cacheprovider --benchmark-disable"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true
no_implicit_optional = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
