[project]
name = "prompt-manager"
version = "0.1.2"
description = "Enterprise Prompt Management System"
requires-python = ">=3.10"
authors = [{ name = "Kirky.X" }]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "sqlmodel>=0.0.24",
    "aiosqlite>=0.19.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1.0",
    "openai>=1.0.0",
    "flagembedding>=1.2.3",
    "modelscope>=1.13.0",
    "moka-py>=0.2.4",
    "tomli>=2.0.0",
    "structlog>=23.1.0",
    "sqlite-vec>=0.1.0",
    "loguru>=0.7.3",
    "asyncpg>=0.29.0",
    "supabase>=2.24.0",
    "alembic>=1.13.2",
    "fastapi-users[sqlalchemy]>=12.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "email-validator>=1.3.0",
]

[project.scripts]
prompt-manager = "prompt_manager.api.__main__:main"

[tool.black]
line-length = 88

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider --benchmark-disable --no-cov"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=0.23.8",
]

[build-system]
requires = ["setuptools>=68", "wheel>=0.41"]
build-backend = "setuptools.build_meta"
